--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="container">
     <img src="c:\Users\hp\OneDrive\Imágenes\Desktop\first\routeur.png"alt="Image de Wi-Fi">
 
-    <h1>Wiffi illimitee</h1>
+    <h1>WI-FI illimitee</h1>
      <h1><p>Profiter d'une connexion rapide et  fiable , 
         idéale pour les cours en ligne et le teletravail en plus des gbaiarai
      </p></h1>
