--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <select class="option">
                 <strong><option value=" ">passe internet 200f pour 1 jour</option></strong>
                 <strong><option value="">passe internet 500f pour 5 jours</option></strong>
-                <strong><option value="">passe internet pour les ORDINATEUR et AUTRE appareil 8000f par mois</option></strong>
+                <strong><option value="">passe internet pour les ORDINATEURS et AUTRES appareils 8000f par mois</option></strong>
                 <strong><option value="">passe internet par semaine 1000f</option></strong>
              </select>
         </td>
